--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="navbar">
-        <div>WORDLE</div>
-        <button class="reset-game" onclick="resetGame()">Reset</button>
+        <div class="heading">WORDLE</div>
+        <button class="reset-btn" onclick="resetGame()">Reset</button>
     </div>
     <div id="content">
         <div class="alert-container" data-alert-container>
