--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script tyep="text/javascript" src="script.js" defer></script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <script type="text/javascript" src="script.js" defer></script>
     <title>WORDLE CLONE</title>
 </head>
 
 <body>
     <div class="navbar">
         <div class="heading">WORDLE</div>
-        <button class="reset-btn" onclick="resetGame()">Reset</button>
+        <div class="reset-btn" onclick="resetGame()">Reset</div>
     </div>
     <div id="content">
         <div class="alert-container" data-alert-container>
